added new api to allow menu through qrcode scanning
