# internal/transport/grpc/server.go
@@ -3,8 +3,13 @@ package grpc
 import (
 	grpc_middleware "github.com/grpc-ecosystem/go-grpc-middleware"
 	grpc_recovery "github.com/grpc-ecosystem/go-grpc-middleware/recovery"
+	"github.com/grpc-ecosystem/go-grpc-middleware/v2/interceptors/auth"
+	"github.com/yuldoshevgg/menu-mono/generated/auth_service"
+	"github.com/yuldoshevgg/menu-mono/generated/general_service"
+	"github.com/yuldoshevgg/menu-mono/generated/menu_service"
 	"github.com/yuldoshevgg/menu-mono/internal/config"
 	"github.com/yuldoshevgg/menu-mono/internal/core/repository"
+	"github.com/yuldoshevgg/menu-mono/internal/core/service"
 
 	"github.com/yuldoshevgg/menu-mono/internal/transport/grpc/middleware"
 	"google.golang.org/grpc"
@@ -27,12 +32,16 @@ func New(grpcTransport *GrpcTransport) (grpcServer *grpc.Server) {
 		grpc.UnaryInterceptor(
 			grpc_middleware.ChainUnaryServer(
 				logMiddleware.GrpcLoggerMiddleware,
+				auth.UnaryServerInterceptor(middleware.AuthFn),
 				grpc_recovery.UnaryServerInterceptor(grpc_recovery.WithRecoveryHandlerContext(middleware.GrpcGateWayRecovery)),
 			),
 		),
 	)
 
 	reflection.Register(grpcServer)
+	auth_service.RegisterRoleServiceServer(grpcServer, service.NewRoleService(grpcTransport.Cfg, grpcTransport.Repo))
+	general_service.RegisterVenueServiceServer(grpcServer, service.NewVenueService(grpcTransport.Cfg, grpcTransport.Repo))
+	menu_service.RegisterMenuServiceServer(grpcServer, service.NewMenuService(grpcTransport.Cfg, grpcTransport.Repo))
 
 	return grpcServer
 }
